separated project into module patterns and renamed

--- a/externalModules/index.html
+++ b/externalModules/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>TypeScript Bootstrap</title>
-    <script src="bundle.js"></script>
+    <script src="assets/lib/require.js"></script>
   </head>
   <body>
-    hey i'm here    
+    With external modules    
   </body>
 </html>
