--- a/externalModules/index.html
+++ b/externalModules/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>TypeScript Bootstrap</title>
-    <script src="assets/lib/require.js"></script>
+    <script data-main="app" src="assets/lib/require.js"></script>
   </head>
   <body>
     With external modules    
