removed root project; add external modules w Browserify

--- a/externalModulesWBrowserify/index.html
+++ b/externalModulesWBrowserify/index.html
@@ -4,6 +4,6 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-    hey i'm here    
+    External modules bundled with Browserify  
   </body>
 </html>
